# bonus-cli

./: README.md  pyproject.toml
app/: cli.py  config.py
bonus_cli/: cli.py  client.py
